--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/root": "github:react-native-async-storage/async-storage",
+    "@react-navigation/elements": "^2.2.4",
+    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/native-stack": "^7.1.14",
+    "@reduxjs/toolkit": "^2.4.0",
+    "axios": "^1.7.8",
+    "dayjs": "^1.11.13",
     "expo": "~52.0.11",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
+    "expo-location": "~18.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
